<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dazz.modemsettings.MainActivity" >

    <RelativeLayout
        android:id="@+id/card_1_layout"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize" >

        <TextView
            android:id="@+id/card_image1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/nb_card1_on"
            android:gravity="center"
            android:text="@string/card_1"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@+id/card_image1"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                style="@android:style/TextAppearance.Material.Menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_1name" />

            <TextView
                android:id="@+id/card1config"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/card_2_layout"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize" >

        <TextView
            android:id="@+id/card_image2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/nb_card2_on"
            android:gravity="center"
            android:text="@string/card_2"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@+id/card_image2"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                style="@android:style/TextAppearance.Material.Menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_2name" />

            <TextView
                android:id="@+id/card2config"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/modem_summary"
        android:textSize="14sp" />

    <Button android:id="@+id/del_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/del_allcofig"/>
</LinearLayout>