<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="?android:listPreferredItemHeightSmall"
            android:gravity="center_vertical"
            android:paddingEnd="?android:listPreferredItemPaddingRight"
            android:paddingStart="?android:listPreferredItemPaddingLeft"
            android:text="@string/fingerprints_manager_note"
            android:textAppearance="?android:textAppearanceSmall" />

        <ImageView style="@style/image_segment" />

        <RelativeLayout
            android:id="@+id/unlock_switch_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:minHeight="?android:listPreferredItemHeightSmall"
            android:paddingEnd="?android:listPreferredItemPaddingRight" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="60.0dip"
                android:layout_marginStart="?android:listPreferredItemPaddingLeft"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile_unlock"
                    android:textAppearance="?android:textAppearanceMedium" />

                <TextView
                    android:id="@+id/unlock_finger_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceSmall" />
            </LinearLayout>

            <Switch
                android:id="@+id/unlock_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <ImageView style="@style/image_segment" />

        <RelativeLayout
            android:id="@+id/wakeup_switch_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:minHeight="?android:listPreferredItemHeightSmall" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:paddingStart="?android:listPreferredItemPaddingLeft"
                android:text="@string/mobile_wakeup"
                android:textAppearance="?android:textAppearanceMedium" />

            <Switch
                android:id="@+id/wakeup_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="?android:listPreferredItemPaddingRight" />
        </RelativeLayout>

        <ImageView style="@style/image_segment" />

        <RelativeLayout
            android:id="@+id/super_snap_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:minHeight="?android:listPreferredItemHeight"
            android:visibility="gone" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="60.0dip"
                android:layout_marginStart="?android:listPreferredItemPaddingLeft"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/super_snap_title"
                    android:textAppearance="?android:textAppearanceMedium" />

                <TextView
                    android:id="@+id/fingerprint_supersnap_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fingerprint_super_snap_summary"
                    android:textAppearance="?android:textAppearanceSmall" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="?android:listPreferredItemPaddingEnd"
                android:background="@drawable/next_item_icon" />
        </RelativeLayout>

        <ImageView style="@style/image_segment" />

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="8dp"
            android:background="#0a000000" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="?android:listPreferredItemHeightSmall"
            android:gravity="center_vertical"
            android:paddingEnd="?android:listPreferredItemPaddingRight"
            android:paddingStart="?android:listPreferredItemPaddingLeft"
            android:text="@string/fingerprints_manager"
            android:textAppearance="?android:textAppearanceSmall" />

        <ImageView style="@style/image_segment" />

        <ListView
            android:id="@+id/fingerprints_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <ImageView style="@style/image_segment" />
    </LinearLayout>

</ScrollView>