<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/modem_layout"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/settings_header_simc_normal" />

        <TextView
            style="@android:style/TextAppearance.Material.Menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/modem_name" />
    </LinearLayout>

    <View
        style="@style/image_segment"
        android:layout_marginBottom="32dp" />

    <View style="@style/image_segment" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/disable_network_check"
            android:orientation="vertical" >

            <TextView
                style="@android:style/TextAppearance.Material.Menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disable_network_check" />

            <TextView
                style="@android:style/TextAppearance.Material.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disable_network_check_summary" />
        </LinearLayout>

        <Switch
            android:id="@+id/disable_network_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <View style="@style/image_segment" />

    <LinearLayout
        android:id="@+id/rp_netcheck"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                style="@android:style/TextAppearance.Material.Menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/replace_network_check_server" />

            <TextView
                android:id="@+id/net_checkser"
                style="@android:style/TextAppearance.Material.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <View style="@style/image_segment" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:orientation="vertical" >

            <TextView
                style="@android:style/TextAppearance.Material.Menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disable_network_check" />

            <TextView
                style="@android:style/TextAppearance.Material.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disable_network_check_summary" />
        </LinearLayout>

        <Switch
            android:id="@+id/open_fingerprint_wakeup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <View style="@style/image_segment" />
    <LinearLayout
        android:id="@+id/about_layout"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin" >

        <TextView
            style="@android:style/TextAppearance.Material.Menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_name" />
    </LinearLayout>

    <View style="@style/image_segment" />


</LinearLayout>
